--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Analyse twitter feeds.",
   "main": "main.js",
   "scripts": {
+    "start": "node main.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
